# marktile

./: README.md  XXXX-XXXX_AFS_Análisis_funcional_del_sistema.md  XXXX-XXXX_AFS_Análisis_funcional_del_sistema.odt  af_del_sistema.odt  content.xml  ejemplo.json  ejemplo.md  ejemplo.odt  pyproject.toml  sample.odt  temporal.md
filters/: diagram.py  revisions.lua
src/cli/: __init__.py  __main__.py
src/markdoc/: __main__.py  markdoc.py  test.py
src/markdoc/filters/: custom.py  htmlbr_to_linebreak.py  mi_filtro.py  set_table_default_style.py
src/markdoc/templates/: .~lock.template.odt#  template.odt
src/markodt/: __main__.py  markodt.py  temp.md
src/markodt/filters/: add_pagebreak_before_h1.py  pagebreak.py  revisions.py
src/markodt/templates/: .~lock.template.odt#  content.opendocument.xml  default.opendocument.xml  template.odt
src/marktile/: README.md  __init__.py  marktile.py  mermaid.py  plantuml.py
templates/: template.odt  template.opendocument.xml
tests/: sample1.md  sample2.md  sample3.md  sample4.md  test.md  test.textile
tests/md2odt/: test.md  test.odt
