[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marktile"
version = "0.2.0"
description = "Markdown to Textile converter"
readme = "README.md"
authors = [
    { name = "Fran Vargas", email = "fvarrui.ceu@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["markdown", "textile", "converter" ]
dependencies = [
    "markdown-it-py[linkify,plugins]",      # for markdown parsing
    "matplotlib",                           # for graph generation
    "mdformat",                             # for markdown formatting
    "mdformat-gfm",                         # for GFM support
    "mdformat-tables",                      # for tables support
    "mdformat-toc",                         # for table of contents support
    "panflute",                             # for pandoc filters
    "pillow",                               # for image conversion
    "pypandoc",                             # for pandoc conversion
    "plantuml",                             # for plantuml conversion
    "requests"                              # for http requests
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]

[project.scripts]
marktile = "cli.__main__:main"

[tool.setuptools]
include-package-data = true